# yntra-vault

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-core/: Cargo.toml
src-core/src/: error.rs  lib.rs
src-core/src/breach/: bloom.rs  mod.rs  strength.rs
src-core/src/crypto/: cipher.rs  kdf.rs  mem.rs  mod.rs  passkey.rs  sharing.rs  tpm.rs
src-core/src/generator/: mod.rs
src-core/src/totp/: mod.rs
src-core/src/vault/: autostart.rs  autotype.rs  entry.rs  format.rs  history.rs  ipc_server.rs  manager.rs  mod.rs  search.rs  sync.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AutotypeButton.tsx  BreachIndicator.tsx  ChangeMasterPasswordModal.tsx  CopyButton.tsx  CreateTagModal.tsx  CreateVaultModal.tsx  EditTagModal.tsx  EntryModal.tsx  Favicon.tsx  PasswordDetail.tsx  PasswordGenerator.tsx  PasswordInput.tsx  PasswordList.tsx  PasswordStrength.tsx  SecurityDashboard.tsx  SettingsPanel.tsx  Sidebar.tsx  TOTPDisplay.tsx  TagContextMenu.tsx  ToastContainer.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  aspect-ratio.tsx  avatar.tsx  breadcrumb.tsx  button-group.tsx  calendar.tsx  carousel.tsx  chart.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  form.tsx  input-otp.tsx  item.tsx  kbd.tsx  menubar.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  table.tsx  toggle-group.tsx  toggle.tsx
src/contexts/: AppStateContext.tsx  ThemeContext.tsx
src/lib/: backend.ts  tauri-backend.ts  useBackend.ts  utils.ts
src/pages/: AppLayout.tsx  Login.tsx  VaultSelect.tsx
src/types/: index.ts
