[package]
name = "yntra-vault-app"
version = "0.1.0"
edition = "2024"
description = "Yntra Vault — Desktop App"

[lib]
name = "yntra_vault_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Our core library
yntra-vault-core = { path = "../src-core" }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.dev.package."*"]
opt-level = 3
